--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       <ul>
         <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
         <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-        <li><a href="https://github.com/yourusername/Cyclistic-User-Analysis" target="_blank">📁 GitHub Repository</a></li>
+        <li><a href="https://github.com/Abdullah-5121/Cyclistic-User-Analysis" target="_blank">📁 GitHub Repository</a></li>
+        <li><a href="01_Presentation_On_Analysis.pdf" target="_blank">📄 View Presentation PDF</a></li>
       </ul>
     </div>
 
     <h2>🔗 Connect</h2>
-    <p>Email: your.email@example.com<br>
+    <p>Email: mabdullahpro437@gmail.com<br>
        LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/yourprofile</a></p>
   </section>
 </body>
