--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
         <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
         <li><a href="https://github.com/Abdullah-5121/Cyclistic-User-Analysis" target="_blank">📁 GitHub Repository</a></li>
-        <li><a href="01_Presentation_On_Analysis.pdf" target="_blank">📄 View Presentation PDF</a></li>
+        <li><a href="01_Casestudy-1_Report.pdf" target="_blank">📄 View Presentation PDF</a></li>
       </ul>
     </div>
 
