--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
         <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
         <li><a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank">📁 GitHub Repository</a></li>
-        <li><a href="01_Casestudy-1_Report.pdf" target="_blank">📄 View Presentation PDF</a></li>
+        <li><a href="/Cyclistic rides - Project/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 View Presentation PDF</a></li>
       </ul>
     </div>
 
