--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <ul>
         <li><strong>Data Source:</strong> Cyclistic Dataset <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank"> 2019</a> and <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank"> 2020</a>  </li>
         <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-        <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-        <li><a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank">📁 GitHub Repository</a></li>
+        <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></l>
         <li><a href="/Cyclistic rides - Project/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 View Presentation PDF</a></li>
+        <li>📁<strong> For more details visit my </strong><a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank"> GitHub Repository</a></li>
       </ul>
     </div>
 
