--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f8f9fa; margin: 0; padding: 0; }
@@ -29,17 +29,22 @@
       <h3>Cyclistic Bike-Share User Behavior Analysis</h3>
       <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
       <ul>
-        <li><strong>Data Source:</strong> Cyclistic Dataset <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank"> 2019</a> and <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank"> 2020</a>  </li>
+        <li><strong>Data Source:</strong> Cyclistic Dataset 
+          <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank">2019</a> and 
+          <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
+        </li>
         <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-        <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></l>
-        <li><a href="/Cyclistic rides - Project/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 View Presentation PDF</a></li>
-        <li>📁<strong> For more details visit my </strong><a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank"> GitHub Repository</a></li>
+        <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+        <li><a href="Cyclistic rides - Project/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+        <li><a href="Cyclistic rides - Project/scripts/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
+        <li><a href="Cyclistic rides - Project/data/summary_dataset.csv" target="_blank">📊 Summary Dataset</a></li>
+        <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank">Visit project folder</a></li>
       </ul>
     </div>
 
     <h2>🔗 Connect</h2>
     <p>Email: mabdullahpro437@gmail.com<br>
-       LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/yourprofile</a></p>
+       LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/muhammad-abdullah-32b66a373</a></p>
   </section>
 </body>
 </html>
