--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
         <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
         <li><a href="Cyclistic rides - Project/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
-        <li><a href="Cyclistic rides - Project/scripts/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
-        <li><a href="Cyclistic rides - Project/data/summary_dataset.csv" target="_blank">📊 Summary Dataset</a></li>
+        <li><a href="Cyclistic rides - Project/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
+        <li><a href="Cyclistic rides - Project/summary(final).csv" target="_blank">📊 Summary Dataset</a></li>
         <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank">Visit project folder</a></li>
       </ul>
     </div>
