--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>M. Abdullah</h1>
-    <p>Data Analyst | R • Tableau • SQL • Python</p>
+    <p>Data Analyst | R • Tableau • SQL </p>
   </header>
 
   <section>
