--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>📌 About Me</h2>
     <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
 
-    <h2>📊 Data Analysis Projects</h2>
+    <h2>📊 Featured Projects</h2>
     <div class="project">
       <h3>Cyclistic Bike-Share User Behavior Analysis</h3>
       <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
