--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <h2>🔗 Connect</h2>
     <p>Email: mabdullahpro437@gmail.com<br>
-       LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/muhammad-abdullah-32b66a373</a></p>
+       LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
   </section>
 </body>
 </html>
