--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="01_Cyclistic_Rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
         <li><a href="01_Cyclistic_Rides/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
         <li><a href="01_Cyclistic_Rides/summary(Final).csv" target="_blank">📊 Summary Dataset</a></li>
-        <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/Cyclistic%20rides%20-%20Project" target="_blank">Visit project folder</a></li>
+        <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/307ffeb4b46d283515b7e5c090c9d10d4808f03d/01_Cyclistic_Rides" target="_blank">Visit project folder</a></li>
       </ul>
     </div>
 
