--- a/index.html
+++ b/index.html
@@ -10,31 +10,53 @@
 <body>
   <header>
     <h1>M. Abdullah</h1>
-    <p>Data Analyst | R • SQL • Tableau  </p>
+    <p>Data Analyst | R • SQL • Tableau</p>
   </header>
 
   <section>
     <h2>📌 About Me</h2>
     <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
 
-    <h2>📊 Featured Projects</h2>
-    <div class="project">
-      <h3>Cyclistic Bike-Share User Behavior Analysis</h3>
-      <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
-      <ul>
-        <li><strong>Data Source:</strong> Cyclistic Dataset 
-          <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank">2019</a> and 
-          <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
-        </li>
-        <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-        <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-        <li><a href="01_Cyclistic_Rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
-        <li><a href="01_Cyclistic_Rides/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
-        <li><a href="01_Cyclistic_Rides/summary(Final).csv" target="_blank">📊 Summary Dataset</a></li>
-        <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/307ffeb4b46d283515b7e5c090c9d10d4808f03d/01_Cyclistic_Rides" target="_blank">Visit project folder</a></li>
-      </ul>
-    </div>
+    <h2>📊 Case Studies</h2>
+    <div class="case-studies">
 
+      <!-- Cyclistic Case Study -->
+      <div class="project">
+        <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
+        <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
+        <ul>
+          <li><strong>Data Source:</strong> Cyclistic Dataset 
+            <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank">2019</a> and 
+            <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
+          </li>
+          <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+          <li><a href="01_Cylistic_rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+          <li><a href="01_Cylistic_rides/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
+          <li><a href="01_Cylistic_rides/summary(Final).csv" target="_blank">📊 Summary Dataset</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/01_Cylistic_rides" target="_blank">Visit project folder</a></li>
+        </ul>
+      </div>
+
+      <!-- Superstore Case Study -->
+      <div class="project">
+        <h3>02. Superstore Sales & Profitability Analysis</h3>
+        <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
+        <ul>
+          <li><strong>Data Source:</strong> Superstore <a href = "https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?"> Dataset </a> </li>
+          <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
+          <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank">📄 Final Presentation PDF</a></li>
+          <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank">📄 R Script</a></li>
+          <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank">📊 Cleaned Dataset</a></li>
+          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
+          <li><strong>GitHub Files:</strong> <a href="#" target="_blank">Visit project folder</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
+
+  <section>
     <h2>🔗 Connect</h2>
     <p>Email: mabdullahpro437@gmail.com<br>
        LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
