--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank">📄 R Script</a></li>
           <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank">📊 Cleaned Dataset</a></li>
           <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-          <li><strong>GitHub Files:</strong> <a href="#" target="_blank">Visit project folder</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/e9fe311f021a99889007bf70c9c83a749f492efd/02_SuperStore" target="_blank">Visit project folder</a></li>
         </ul>
       </div>
 
