--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="01_Cyclistic_Rides/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Header -->
   <header>
     <h1>M. Abdullah</h1>
     <p>Data Analyst | R • SQL • Tableau</p>
   </header>
 
+  <!-- About Me -->
   <section>
     <h2>📌 About Me</h2>
     <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
+  </section>
 
+  <!-- Case Studies -->
+  <section>
     <h2>📊 Case Studies</h2>
-    <div class="case-studies">
+    <div class="case-studies-vertical">
 
       <!-- Cyclistic Case Study -->
-      <div class="project">
+      <div class="case-study">
         <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
         <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
         <ul>
@@ -39,23 +44,24 @@
       </div>
 
       <!-- Superstore Case Study -->
-      <div class="project">
+      <div class="case-study">
         <h3>02. Superstore Sales & Profitability Analysis</h3>
         <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
         <ul>
-          <li><strong>Data Source:</strong> Superstore <a href = "https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?"> Dataset </a> </li>
+          <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank">Dataset</a></li>
           <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
           <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank">📄 Final Presentation PDF</a></li>
           <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank">📄 R Script</a></li>
           <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank">📊 Cleaned Dataset</a></li>
           <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/e9fe311f021a99889007bf70c9c83a749f492efd/02_SuperStore" target="_blank">Visit project folder</a></li>
+          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank">Visit project folder</a></li>
         </ul>
       </div>
 
     </div>
   </section>
 
+  <!-- Contact -->
   <section>
     <h2>🔗 Connect</h2>
     <p>Email: mabdullahpro437@gmail.com<br>
