--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="01_Cyclistic_Rides/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Header -->
   <header>
-    <h1>M. Abdullah</h1>
-    <p>Data Analyst | R • SQL • Tableau</p>
+    <div class="header-content">
+      <!-- Profile Picture -->
+      <img src="your-photo.jpg" alt="M. Abdullah" class="profile-pic">
+      
+      <!-- Text -->
+      <div class="header-text">
+        <h1>M. Abdullah</h1>
+        <p>Data Analyst | R • SQL • Tableau</p>
+      </div>
+    </div>
   </header>
 
   <!-- About Me -->
