--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="header-content">
       <!-- Profile Picture -->
-      <img src="your-photo.jpg" alt="M. Abdullah" class="profile-pic">
+      <img src="01_Cyclistic_Rides/Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
       
       <!-- Text -->
       <div class="header-text">
