--- a/index.html
+++ b/index.html
@@ -37,42 +37,21 @@
       <div class="case-study">
         <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
         <p>A case study analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
-        <ul>
-          <li><strong>Data Source:</strong> Cyclistic Dataset 
-            <a href="https://docs.google.com/spreadsheets/d/1uCTsHlZLm4L7-ueaSLwDg0ut3BP_V4mKDo2IMpaXrk4/template/preview?resourcekey=0-dQAUjAu2UUCsLEQQt20PDA#gid=1797029090" target="_blank">2019</a> and 
-            <a href="https://docs.google.com/spreadsheets/d/179QVLO_yu5BJEKFVZShsKag74ZaUYIF6FevLYzs3hRc/template/preview#gid=640449855" target="_blank">2020</a>
-          </li>
-          <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/CyclisticDataset_17539250254980/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-          <li><a href="01_Cylistic_rides/02_Presentation/01_Casestudy-1_Report.pdf" target="_blank">📄 Final Presentation PDF</a></li>
-          <li><a href="01_Cylistic_rides/01_R-Work/cyclistic_analysis.R" target="_blank">📄 R Script</a></li>
-          <li><a href="01_Cylistic_rides/summary(Final).csv" target="_blank">📊 Summary Dataset</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/01_Cylistic_rides" target="_blank">Visit project folder</a></li>
-        </ul>
       </div>
 
       <!-- Superstore Case Study -->
       <div class="case-study">
         <h3>02. Superstore Sales & Profitability Analysis</h3>
         <p>A case study analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
-        <ul>
-          <li><strong>Data Source:</strong> Superstore <a href="https://www.kaggle.com/datasets/vivek468/superstore-dataset-final?" target="_blank">Dataset</a></li>
-          <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
-          <li><a href="02_SuperStore/02_Presentation/SuperStore Presentation.pdf" target="_blank">📄 Final Presentation PDF</a></li>
-          <li><a href="02_SuperStore/01_R Work/SuperStore Dataset ( Cleaning + Analysis + Visualization).R" target="_blank">📄 R Script</a></li>
-          <li><a href="02_SuperStore/Cleaned_Superstore.csv" target="_blank">📊 Cleaned Dataset</a></li>
-          <li><a href="https://public.tableau.com/app/profile/muhammad.abdullah6976/viz/SuperStoreDatasetVisualization/Dashboard1" target="_blank">🔗 Tableau Dashboard</a></li>
-          <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank">Visit project folder</a></li>
-        </ul>
       </div>
 
     </div>
   </section>
 
   <!-- Contact -->
-  <section>
+  <section class="contact">
     <h2>🔗 Connect</h2>
-    <p>Email: mabdullahpro437@gmail.com<br>
+    <p>Email: <a href="mailto:mabdullahpro437@gmail.com">mabdullahpro437@gmail.com</a><br>
        LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
   </section>
 </body>
