--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
   </section>
 
   <!-- Contact -->
-  <section>
+<section>
+  <div class="connect-box">
     <h2>🔗 Connect</h2>
-    <p>Email: mabdullahpro437@gmail.com<br>
-       LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
-  </section>
-</body>
-</html>
+    <p>Email: <a href="mailto:mabdullahpro437@gmail.com">mabdullahpro437@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
+  </div>
+</section>
