--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="01_Cyclistic_Rides/style.css" />
   <script src="https://kit.fontawesome.com/a81368914c.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Hero / Header -->
-  <header>
-    <div class="header-content">
-      <img src="01_Cyclistic_Rides/Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
-      <div class="header-text">
+  <!-- Hero Section -->
+  <header class="hero">
+    <div class="hero-content">
+      <div class="hero-image">
+        <img src="01_Cyclistic_Rides/Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
+      </div>
+      <div class="hero-text">
         <h1>M. Abdullah</h1>
-        <p>Data Analyst | R • SQL • Tableau</p>
+        <p class="role">Data Analyst | R • SQL • Tableau</p>
         <p class="tagline">Turning data into actionable insights</p>
       </div>
     </div>
@@ -25,7 +27,7 @@
   <!-- About Me -->
   <section class="about">
     <h2>📌 About Me</h2>
-    <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
+    <p>I’m a data analyst passionate about turning raw data into actionable insights. This portfolio showcases my projects, skills, and expertise using R, SQL, Tableau, and more.</p>
     <div class="tools">
       <i class="fab fa-r-project"></i>
       <i class="fas fa-database"></i>
@@ -53,28 +55,23 @@
   <!-- Case Studies -->
   <section class="projects">
     <h2>📊 Case Studies</h2>
-    <div class="case-studies-vertical">
+    <div class="case-studies">
 
       <div class="case-study">
-        <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
+        <h3>01. Cyclistic Bike-Share Analysis</h3>
         <p>Analyzing ride behavior differences between annual members and casual riders using R and Tableau.</p>
         <ul>
           <li><strong>Data Source:</strong> Cyclistic 2019 & 2020</li>
           <li><strong>Tools:</strong> R, dplyr, lubridate, Tableau, PowerPoint</li>
-          <li><a href="#">🔗 Tableau Dashboard</a></li>
-          <li><a href="#">📄 Final Presentation PDF</a></li>
-          <li><a href="#">📄 R Script</a></li>
         </ul>
       </div>
 
       <div class="case-study">
-        <h3>02. Superstore Sales & Profitability Analysis</h3>
+        <h3>02. Superstore Sales & Profitability</h3>
         <p>Analyzing Superstore dataset across segments, categories, regions, and shipping modes.</p>
         <ul>
           <li><strong>Data Source:</strong> Superstore Dataset</li>
           <li><strong>Tools:</strong> R, ggplot2, Tableau</li>
-          <li><a href="#">📄 Final Presentation PDF</a></li>
-          <li><a href="#">📄 R Script</a></li>
         </ul>
       </div>
 
