--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a81368914c.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="01_Cyclistic_Rides/style.css">
 </head>
 <body>
 
