--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="background-animation-container"></div> 
+    <div class="hexagon-background"></div> 
     
     <header class="main-header">
         <div class="interactive-box">
