--- a/index.html
+++ b/index.html
@@ -77,3 +77,9 @@
     <p>LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
   </div>
 </section>
+
+<!-- 8. Link to JavaScript file -->
+<script src="script.js"></script>
+
+</body>
+</html>
