--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="01_Cyclistic_Rides/style.css" />
 </head>
 <body>
   <!-- Header -->
@@ -77,9 +77,3 @@
     <p>LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
   </div>
 </section>
-
-<!-- 8. Link to JavaScript file -->
-<script src="script.js"></script>
-
-</body>
-</html>
