--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M. Abdullah | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="01_Cyclistic_Rides/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="header-content">
       <!-- Profile Picture -->
-      <img src="01_Cyclistic_Rides/Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
+      <img src="Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
       
       <!-- Text -->
       <div class="header-text">
