--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>M. Abdullah | Data Analyst Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,17 +14,11 @@
     <div class="header-content">
       <!-- Profile Picture -->
       <img src="Mie_Pic.jpg" alt="M. Abdullah" class="profile-pic">
-
+      
       <!-- Text -->
       <div class="header-text">
         <h1>M. Abdullah</h1>
         <p>Data Analyst | R • SQL • Tableau</p>
-
-        <!-- Connect Box inside header -->
-        <div class="connect-box">
-          <p>Email: <a href="mailto:mabdullahpro437@gmail.com">mabdullahpro437@gmail.com</a></p>
-          <p>LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
-        </div>
       </div>
     </div>
   </header>
@@ -38,6 +33,7 @@
   <section>
     <h2>📊 Case Studies</h2>
     <div class="case-studies-vertical">
+
       <!-- Cyclistic Case Study -->
       <div class="case-study">
         <h3>01. Cyclistic Bike-Share User Behavior Analysis</h3>
@@ -70,7 +66,15 @@
           <li><strong>GitHub Files:</strong> <a href="https://github.com/Abdullah-5121/Abdullah-5121.github.io/tree/main/02_SuperStore" target="_blank">Visit project folder</a></li>
         </ul>
       </div>
+
     </div>
   </section>
-</body>
-</html>
+
+  <!-- Contact -->
+<section>
+  <div class="connect-box">
+    <h2>🔗 Connect</h2>
+    <p>Email: <a href="mailto:mabdullahpro437@gmail.com">mabdullahpro437@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
+  </div>
+</section>
