--- a/index.html
+++ b/index.html
@@ -78,13 +78,30 @@
   </section>
 
   <!-- Contact -->
-  <section>
-    <div class="connect-box">
-      <h2>🔗 Connect</h2>
-      <p>Email: <a href="mailto:mabdullahpro437@gmail.com">mabdullahpro437@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/muhammad-abdullah-32b66a373/" target="_blank">linkedin.com/in/mabdullahckl</a></p>
+  <!-- Connect Section -->
+<section>
+  <div class="connect-box">
+    <h2>🔗 Connect</h2>
+    <div class="social-icons">
+      <a href="mailto:mabdullapro437@gmail.com" target="_blank" class="icon email" title="Email">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank" class="icon linkedin" title="LinkedIn">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="https://www.instagram.com/mabdullah_ckl" target="_blank" class="icon instagram" title="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank" class="icon facebook" title="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
     </div>
-  </section>
+  </div>
+</section>
+
+<!-- Font Awesome for icons -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
 
   <!-- Initialize Particles -->
   <script>
