--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
   <!-- Style -->
   <link rel="stylesheet" href="style.css" />
@@ -79,24 +80,17 @@
 
 <!-- Connect Section -->
 <section>
-  <div class="connect-box-icons">
-    <a href="mailto:mabdullapro437@gmail.com" target="_blank" class="icon email" title="Email">
-      <i class="fas fa-envelope"></i>
-    </a>
-    <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank" class="icon linkedin" title="LinkedIn">
-      <i class="fab fa-linkedin-in"></i>
-    </a>
-    <a href="https://www.instagram.com/mabdullah_ckl" target="_blank" class="icon instagram" title="Instagram">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank" class="icon facebook" title="Facebook">
-      <i class="fab fa-facebook-f"></i>
-    </a>
+  <div class="connect-box">
+    <h2>🔗 Connect</h2>
+    <div class="social-icons">
+      <a href="mailto:mabdullapro437@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/mabdullahckl" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/mabdullah_ckl" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/share/1Ea6cTcDEr/" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
   </div>
 </section>
 
-<!-- Font Awesome -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <!-- Initialize Particles -->
   <script>
