--- a/index.html
+++ b/index.html
@@ -114,5 +114,21 @@
     });
   </script>
 
+  
+<script>
+let scrollTimeout;
+
+function showScrollbars() {
+  document.body.style.setProperty('--scrollbar-opacity', '1');
+  clearTimeout(scrollTimeout);
+  scrollTimeout = setTimeout(() => {
+    document.body.style.setProperty('--scrollbar-opacity', '0');
+  }, 1000); // hides after 1s of no scrolling
+}
+
+window.addEventListener('scroll', showScrollbars);
+document.querySelector('.case-studies-vertical').addEventListener('scroll', showScrollbars);
+</script>
+
 </body>
 </html>
