--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
   <!-- About Me -->
   <section>
-    <h2>📌 About Me</h2>
+    <h2><i class="fas fa-user-circle"></i> About Me</h2>
     <p>I’m a data analyst passionate about turning data into actionable insights. This site showcases my projects, skills, and experience using R, Tableau, and more.</p>
   </section>
 
   <!-- Case Studies -->
   <section>
-    <h2>📊 Case Studies</h2>
+    <h2><i class="fas fa-chart-line"></i> Case Studies</h2>
     <div class="case-studies-vertical">
 
       <!-- Cyclistic Case Study -->
